# xjb

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  code_explain.ipynb  dtoa.cpp  dtoa_xjb64.cpp  dtoa_xjb64_v1.cpp  dtoa_xjb64_xjb32.cpp  dtoa_xjb_comp.cpp  example.cpp  example_new.cpp  makefile  test.cpp  test.sh  xjb32.cpp  xjb32_i.cpp  xjb64.cpp  xjb64_i.cpp
.github/workflows/: ci.yml
bench/: CMakeLists.txt  README.md  bench_float_result_AMD_7840H.html  check.cpp  main.cpp  makefile
bench/bench_result/AMD_Ryzen_7_7840H_w__Radeon_780M_Graphics/: double_Clang_21_1_1.html  double_Clang_21_1_6.html  double_Clang_21_1_7.html  double_GCC_15_2_0.html  float_Clang_21_1_1.html  float_Clang_21_1_6.html  float_Clang_21_1_7.html  float_GCC_15_2_0.html
bench/bench_result/Apple_M1/: double_Clang_17_0_0__Apple_version_.html  float_Clang_17_0_0__Apple_version_.html
bench/dragonbox/: dragonbox.cc  dragonbox_i.hpp  dragonbox_to_chars.cpp  format-inl.h
bench/fmt/: fmt_i.hpp
bench/fmt/src/: format.cc
bench/jnum/: jnum.c  jnum_i.hpp
bench/ldouble/: ldouble.cpp  ldouble_i.hpp
bench/result/: bench_double_AMD_Ryzen_7_7840H_w__Radeon_780M_Graphics_Clang_18_1_3.html  bench_double_AMD_Ryzen_7_7840H_w__Radeon_780M_Graphics_Clang_19_0_0.html  bench_double_AMD_Ryzen_7_7840H_w__Radeon_780M_Graphics_Clang_21_1_1.html  bench_double_AMD_Ryzen_7_7840H_w__Radeon_780M_Graphics_Clang_21_1_6.html  bench_double_AMD_Ryzen_7_7840H_w__Radeon_780M_Graphics_GCC_13_3_0.html  bench_double_AMD_Ryzen_7_7840H_w__Radeon_780M_Graphics_GCC_14_2_0__MinGW_w64_.html  bench_double_AMD_Ryzen_7_7840H_w__Radeon_780M_Graphics_GCC_15_2_0.html  bench_double_Apple_M1_Clang_17_0_0__Apple_version_.html  bench_float_AMD_Ryzen_7_7840H_w__Radeon_780M_Graphics_Clang_18_1_3.html  bench_float_AMD_Ryzen_7_7840H_w__Radeon_780M_Graphics_Clang_19_0_0.html  bench_float_AMD_Ryzen_7_7840H_w__Radeon_780M_Graphics_Clang_21_1_1.html  bench_float_AMD_Ryzen_7_7840H_w__Radeon_780M_Graphics_Clang_21_1_6.html  bench_float_AMD_Ryzen_7_7840H_w__Radeon_780M_Graphics_GCC_13_3_0.html  bench_float_AMD_Ryzen_7_7840H_w__Radeon_780M_Graphics_GCC_15_2_0.html  bench_float_Apple_M1_Clang_17_0_0__Apple_version_.html
bench/ryu/: d2fixed.c  d2s.c  d2s_intrinsics.h  d2s_small_table.h  f2s.c  generic_128.c  ryu_i.hpp
bench/schubfach/: schubfach_32.cpp  schubfach_32.h  schubfach_64.cc  schubfach_64.h  schubfach_i.hpp
bench/schubfach_vitaut/: schubfach.cc  schubfach_vitaut_i.hpp
bench/schubfach_xjb/: schubfach_32.cpp  schubfach_32.h  schubfach_64.cc  schubfach_64.h  schubfach_xjb_i.hpp
bench/teju/: CMakeLists.txt  common.h  config.h  div10.h  double.c  double.h  float.c  float.h  float128.c  float128.h  float16.c  float16.h  literal.h  mshift.h  teju.h  teju_i.hpp
bench/uscalec/: example_fixed_test.cpp  example_mod_test.cpp  example_test.cpp  ftoa.c  ftoa_modify.c  makefile  pow10.h  uscale.c  uscalec_i.hpp  uscalec_mod.cpp
bench/util/: benchmark.cpp  benchmark_helper.cpp  check_float_multi_thread.cpp  get_cpu_name.cpp
bench/util/double-conversion/: CMakeLists.txt
bench/util/double-conversion/double-conversion/: bignum-dtoa.cc  double-conversion.h  double-to-string.cc  fast-dtoa.cc  string-to-double.cc
bench/util/gtest/: .clang-format  CMakeLists.txt
bench/util/yybench/src/: yybench.cpp  yybench.h  yybench_chart.c  yybench_cpu.c  yybench_env.c  yybench_file.c  yybench_perf.c  yybench_str.c
bench/xjb/: d2e_demo  d2e_demo.cpp  d2e_xjb.cpp  dec_to_ascii.cpp  dec_to_bcd.cpp  dtoa_xjb64_xjb32.cpp  dtoa_xjb_comp.cpp  ftoa.cpp  ftoa_json.cpp  ftoa_json_new.cpp  ftoa_json_old_v2.cpp  ftoa_v2.cpp  makefile  msvc_compatibility_analysis.md  table.cpp  table_test.cpp  u128_mul.h  xjb.cpp  xjb.h  xjb32.cpp  xjb32_i.cpp  xjb32_i.hpp  xjb64.cpp  xjb64_i.cpp  xjb64_i.hpp  xjb_arm_clang.s  xjb_arm_gcc.s  xjb_clang.s  xjb_comp.cpp  xjb_comp_arm_clang.s  xjb_gcc.s  xjb_i.hpp  xjb_icpx.s
bench/xjb/asm_file/x64/: ftoa.cpp  ftoa_clang.s  ftoa_gcc.s  ftoa_icpx.s  makefile
bench/xjb/float_to_decimal/: xjb32_i.cpp
bench/xjb/float_to_string/: dec_to_ascii.cpp  ftoa.cpp  ftoa.h  ftoa_comp.cpp  ftoa_nommove.cpp  ftoa_spilt.cpp  ftoa_v2.cpp  xjb_comp.cpp
bench/xjb/other/: d2e_demo.cpp  d2e_xjb.cpp  dtoa_xjb64_xjb32.cpp  table.cpp  uscalec_mod.cpp  xjb.cpp
bench/xjb/perf/: main  main.cpp  main_c  main_g  main_i  main_icpx.s  makefile
bench/xjb/test/: bench_f16.cpp  check_f16.cpp  f16_to_decimal.cpp  f16_to_decimal.py  f16_to_string.cpp  generate_two_nearest_value.cpp  makefile  numpy_f16.py
bench/yy/: yy_double.c  yy_double_modify.c  yy_i.hpp  yyjson.c  yyjson_simplify.c
bench/zmij/: zmij.c  zmij.cc  zmij.cpp  zmij.h  zmij_i.hpp  zmij_new.cc  zmij_new.cpp
bench/zmij/zmij-main/: CMakeLists.txt  README.md  example.cc  gen-pow10.py  zmij-test.cc  zmij.c  zmij.cc  zmij.h
bench_result/: bench_double_AMD_Ryzen_7_7840H_w__Radeon_780M_Graphics_Clang_18_1_3.html  bench_double_Apple_M1_Clang_17_0_0__Apple_version_.html  bench_float_AMD_Ryzen_7_7840H_w__Radeon_780M_Graphics_Clang_18_1_3.html  bench_float_AMD_Ryzen_7_7840H_w__Radeon_780M_Graphics_Clang_19_0_0.html
bench_result/AMD_Ryzen_7_7840H_w__Radeon_780M_Graphics/: double_Clang_21_1_1.html  double_Clang_21_1_7.html  double_Clang_21_1_8.html  double_Clang_22_1_0.html  double_GCC_14_2_0__MinGW_w64_.html  double_GCC_15_2_0.html  double_GCC_16_0_1.html  float_Clang_21_1_1.html  float_Clang_21_1_7.html  float_GCC_14_2_0__MinGW_w64_.html  float_GCC_15_2_0.html
bench_result/Apple_M1/: double_Clang_17_0_0__Apple_version_.html  double_Clang_21_0_0__Apple_version_.html  (+2 more)
doc/: README_backup.md  code_explain.ipynb  fast_f2s.tex
example/: example.cpp  example_json.cpp  example_uscalec.cpp  makefile
old_src/: xjb64_i.cpp
py_test/: comp.py  find_to_str_bit.py  gen.py  generic_verify.py  h_cache.py  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test8.txt  test82.txt  test83.txt  test84.txt  test9.py  verify.py
src/: ftoa.cpp  ftoa.h  ftoa_json.cpp  ftoa_new.cpp  xjb64.cpp
src/old_version/: ftoa_old.cpp  (+1 more)
test/: CMakeLists.txt  float-check.cc  xjb-test.cc
(+15 files in other folders)
